// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-checkbox default 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <p
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-indeterminate"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox label 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  label="label"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox position=right 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-uuid"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox value 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox verticalAlign=center 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam placeat dolores esse libero ipsum, officiis asperiores! Distinctio quis, deleniti placeat, hic aperiam quia magnam accusantium at eaque voluptatum ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quia culpa quas distinctio sapiente assumenda, soluta obcaecati ipsam reprehenderit aperiam eos blanditiis aspernatur provident libero quod modi quos iusto molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ut consequuntur tempore fuga nihil quibusdam officia deleniti nesciunt, ullam eveniet explicabo unde alias, esse asperiores. Corrupti officiis sunt voluptatibus iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, est! Optio ipsum voluptates alias vel quos!
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox verticalAlign=top 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checkbox-top"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam placeat dolores esse libero ipsum, officiis asperiores! Distinctio quis, deleniti placeat, hic aperiam quia magnam accusantium at eaque voluptatum ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quia culpa quas distinctio sapiente assumenda, soluta obcaecati ipsam reprehenderit aperiam eos blanditiis aspernatur provident libero quod modi quos iusto molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ut consequuntur tempore fuga nihil quibusdam officia deleniti nesciunt, ullam eveniet explicabo unde alias, esse asperiores. Corrupti officiis sunt voluptatibus iure? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, est! Optio ipsum voluptates alias vel quos!
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right default 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right error 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <p
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-indeterminate"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-uuid"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right value 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <p
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        This is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-uuid"
    type="hidden"
    value="true"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-uuid"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-uuid"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
